fixing more code
